--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "demo2",
-  "version": "8.1.8",
+  "name": "stagger",
+  "version": "1.0.0",
   "private": true,
-  "homepage": "/metronic8/react/demo6",
+  "homepage": "/",
   "dependencies": {
     "@formatjs/intl-pluralrules": "4.3.3",
     "@formatjs/intl-relativetimeformat": "10.0.1",
